<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_user_username"
            style="@style/TextContentCard.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/img_user_photo"
            app:layout_constraintTop_toTopOf="@+id/img_user_photo"
            android:layout_marginStart="16dp"
            android:textColor="@color/blue_light"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tv_user_fullname"
            style="@style/TextContentCard.Subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_user_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_username"
            android:text="@string/full_name"/>

        <TextView
            android:id="@+id/tv_user_location"
            style="@style/TextContentCard.Small"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_fullname"
            app:layout_constraintStart_toEndOf="@+id/img_user_photo"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/tv_user_repositories"
            style="@style/TextContentCard.Small"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_location"
            app:layout_constraintStart_toEndOf="@+id/img_user_photo"
            android:text="@string/repositories" />

        <TextView
            android:id="@+id/tv_user_company"
            style="@style/TextContentCard.Small"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_repositories"
            app:layout_constraintStart_toEndOf="@+id/img_user_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0"
            android:textColor="@color/yellow_light"
            android:text="@string/company" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
