<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailUserActivity">

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                tools:src="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tv_user_username"
                style="@style/TextContentCard.TitleDetail"
                android:layout_marginTop="16dp"
                android:layout_below="@id/img_user_photo"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                tools:text="@string/username"/>

            <TextView
                android:id="@+id/tv_user_fullname"
                style="@style/TextContentCard.SubtitleDetail"
                android:layout_below="@id/tv_user_username"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                tools:text="@string/full_name"/>

            <TextView
                android:id="@+id/tv_user_location"
                style="@style/TextContentCard.SubtitleDetail"
                android:layout_below="@id/tv_user_fullname"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                tools:text="@string/location" />

            <TextView
                android:id="@+id/tv_user_repositories"
                style="@style/TextContentCard.SubtitleDetail"
                android:layout_below="@id/tv_user_location"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                tools:text="@string/repositories" />

            <TextView
                android:id="@+id/tv_user_company"
                style="@style/TextContentCard.SubtitleDetail"
                android:textColor="@color/yellow_light"
                android:layout_below="@id/tv_user_repositories"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                tools:text="@string/company" />

            <LinearLayout
                android:id="@+id/linear_layout_follows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_user_company"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_following_value"
                    style="@style/TextContentCard.Large"
                    android:layout_marginStart="0dp"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    tools:text="5000"/>

                <TextView
                    android:id="@+id/tv_followers_value"
                    style="@style/TextContentCard.Large"
                    android:layout_marginStart="0dp"
                    android:layout_weight="0.5"
                    android:textAlignment="center"
                    tools:text="1300"/>
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_layout_follows"
                app:tabTextColor="?attr/colorPrimary"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_below="@id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>